log
Thu Apr  7 11:33:16 HSP 2022: 
 tests:  0|6
total_score: 0/70
ec4fc2d
Thu Apr  7 11:35:54 HSP 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     array->buckets=(Pair*) malloc (capacity*sizeof(Pair));
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
87e795a
Thu Apr  7 11:37:01 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     array->buckets=(Pair*) malloc (capacity*sizeof(Pair));
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
486d55a
Thu Apr  7 11:39:37 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8174e95
Thu Apr  7 11:40:25 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
42603fd
Thu Apr  7 11:40:55 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f308bff
Thu Apr  7 12:07:07 HSP 2022: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  1|5
total_score: 10/70
75a2766
Thu Apr  7 12:11:21 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c3e85ca
Thu Apr  7 12:12:48 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
dc8e88a
Sat Apr  9 22:08:26 HSP 2022: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
eb0b2c5
Sat Apr  9 22:10:55 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
68957ed
Sun Apr 10 10:30:47 HSP 2022: 
 hashmap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 30/70
c1eafc5
Sun Apr 10 10:31:09 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
d91ba80
Sun Apr 10 10:44:25 HSP 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
d0fc38e
Sun Apr 10 10:45:12 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
102f85b
Sun Apr 10 10:45:43 HSP 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
61fa77f
Sun Apr 10 10:59:25 HSP 2022: 
 hashmap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
5c23b51
Sun Apr 10 11:07:28 HSP 2022: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  0|0
c12dfa0
Sun Apr 10 11:12:35 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e96d8ee
Sun Apr 10 11:15:51 HSP 2022: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
449ca26
Sun Apr 10 11:20:33 HSP 2022: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  12|2
total_score: 50/70
6ae6066
Sun Apr 10 11:29:27 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
7099ff3
Sun Apr 10 11:29:51 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
9e0b69d
Sun Apr 10 11:45:27 HSP 2022: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
ba8e512
Sun Apr 10 11:46:09 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
9d73986
Sun Apr 10 11:51:54 HSP 2022: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
eb6cbe7
Sun Apr 10 11:55:37 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
f45dfef
Sun Apr 10 11:59:59 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
1f7ad10
Sun Apr 10 12:02:10 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
d1c160a
Sun Apr 10 12:03:32 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
5d35fd2
Sun Apr 10 12:03:58 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
10110b0
Sun Apr 10 12:04:47 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
73b4403
Sun Apr 10 12:05:08 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
2a498f6
Sun Apr 10 12:08:00 HSP 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  13|2
total_score: 50/70
e6fe405
Sun Apr 10 12:08:22 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
faa7dbd
Sun Apr 10 12:08:43 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
b498b82
Sun Apr 10 12:14:18 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
f8194a7
Sun Apr 10 12:14:39 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
b5bb392
Sun Apr 10 12:29:48 HSP 2022: 
 hashmap.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  0|0
cbe20aa
Sun Apr 10 12:33:49 HSP 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
5570513
Sun Apr 10 12:37:00 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
d41b066
Sun Apr 10 12:48:07 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d22226d
Sun Apr 10 20:35:04 HSP 2022: 
 hashmap.c | 15 +++++----------
 1 file changed, 5 insertions(+), 10 deletions(-)
 tests:  0|0
cbf937c
Sun Apr 10 20:45:22 HSP 2022: 
 hashmap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  0|0
50cf711
Sun Apr 10 20:45:53 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b067ecf
Sun Apr 10 20:47:40 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
c24ecf4
